--- a/public/text-case-converter.html
+++ b/public/text-case-converter.html
@@ -47,7 +47,11 @@
         <footer>
             <p>
                 Made with ❤ by Tanese.
-                <a href="" target="_blank">View this on GitHub!</a>
+                <a
+                    href="https://github.com/Luis-Tanese/WebTools"
+                    target="_blank"
+                    >View this on GitHub!</a
+                >
             </p>
         </footer>
     </body>
