--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,11 @@
         <footer>
             <p>
                 Made with ❤ by Tanese.
-                <a href="" target="_blank">View this on GitHub!</a>
+                <a
+                    href="https://github.com/Luis-Tanese/WebTools"
+                    target="_blank"
+                    >View this on GitHub!</a
+                >
             </p>
         </footer>
     </body>
