--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,63 @@
 
                 <div
                     class="tool-card"
+                    data-name="browserinfo"
+                    data-keywords="browser information ip address geolocation system details"
+                >
+                    <h3>Browser Information</h3>
+                    <p>
+                        View detailed information about your browser and IP
+                        address
+                    </p>
+                    <a href="./browser-info.html" class="tool-link"
+                        >Open Tool</a
+                    >
+                </div>
+
+                <div
+                    class="tool-card"
+                    data-name="unitconverter"
+                    data-keywords="unit converter measurement length weight temperature time speed pressure"
+                >
+                    <h3>Unit Converter</h3>
+                    <p>Convert between different units of measurement</p>
+                    <a href="./unit-converter.html" class="tool-link"
+                        >Open Tool</a
+                    >
+                </div>
+
+                <div
+                    class="tool-card"
+                    data-name="datetan"
+                    data-keywords="date formatter time format converter timezone"
+                >
+                    <h3>DateTan Formatter</h3>
+                    <p>
+                        Format dates with custom patterns. Mainly for me but
+                        feel free to use it
+                    </p>
+                    <a href="./datetan-formatter.html" class="tool-link"
+                        >Open Tool</a
+                    >
+                </div>
+
+                <div
+                    class="tool-card"
+                    data-name="hashgenerator"
+                    data-keywords="hash generator md5 sha1 sha256 sha512 encryption security"
+                >
+                    <h3>Hash Generator</h3>
+                    <p>
+                        Generate various hash formats from text including MD5,
+                        SHA-1, SHA-256
+                    </p>
+                    <a href="./hash-generator.html" class="tool-link"
+                        >Open Tool</a
+                    >
+                </div>
+
+                <div
+                    class="tool-card"
                     data-name="placeholder"
                     data-keywords="placeholder example"
                 >
