--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
                     data-keywords="contrast checker accessibility colors"
                 >
                     <h3>Contrast Checker</h3>
-                    <p>Check color contrast for accessibility compliance</p>
+                    <p>Check color contrast. Usually where I test colors for projects</p>
                     <a href="./contrast-checker.html" class="tool-link"
                         >Open Tool</a
                     >
